@@ -1,6 +1,7 @@
 Revision history for Getopt-Long
 
 {{$NEXT}}
+    - Make FormattableException a Getopt::Long::Exception
 
 0.4.0  2022-12-01T15:26:25+01:00
     - Add Argument classes
